# evmauth.com

./: .env.example  .gitignore  CLAUDE.md  PROJECT_PLAN.md  README.md  SUMMARY.md  Tiltfile  check.sh  docker-compose.yml
rs/: Cargo.toml  Dockerfile  OPENAPI.md  RS_AUDIT.md
rs/.sqlx/: query-09d1f2736b8ba73db60d54d438b56001c53e5198d1c28f9ffcb53b9060047f32.json  query-16658d553a955ea55fa924f9e460b66b9dc068fc3ebfc9d508263044d839ae65.json  query-20efdbd0204b5b9d0c15ddec7b833922224cd65587e7de759f70cd56edac894e.json  query-279c3b1bb5f486604237ad3c778b55edb2fe0f0449c7a173fc1d6387cd2d87bb.json  query-29a50433762052e7fb1cfd45a255ec9ff0bdbca3b80249cb94f4d2b09320b1c9.json  query-2e590c5f6064a45f9fac300626d664b3a1d75b6f52e911c922955bbc78c0ecc9.json  query-32114da73bbd719ebe91e2198bf85f83b153c77b353a92d6e475c050820e49c1.json  query-3a55709ca0fc0ae5577a80507f5173140d457a910fdcd458b081dc93bd989f3d.json  query-3b2ce0f62a794bee3c96a1abd28db9173db848b57bc795dc569b18e07c2cf603.json  query-3caeccbecdafa9221bce6428e4f14e642fd10acecbff63473305ae5d5dd48bd6.json  query-3d4aa3ad1a2ffe79b8276cbdc2860897df376f8485d864f95cf16fb78081535b.json  query-4b8926bcef6b12cbf7d94c4c2f9892310d105532feb4272ec5cb4db0796ec0ae.json  query-51dbee566797b33e881f50edb167794be5512cedc16d17368941aa8a10dd9008.json  query-5344d09db66d33c878d2e053a0e7394ce6d0badf2d4ca5b12d401fe045a6b80b.json  query-55429744be5f5d9a690e021da5f19d1a69db5a2ff731f1b273c041a0deefc510.json  query-583910a6981c71a6a26c8a61b490e6e2d03a3a655bc65ca64b3beff0012d3520.json  query-591e9943b6c7c62ac601a2a3eeba091cd709e4af4e0c3df56fa98cf2b5d5ac45.json  query-5e347aa9c9277dd34004a1fd4d791582a628ede58fa0e802a726f9724eff928e.json  query-602fc2d8c47898b25ffd1d7a95103d6fa2b9fe6831dbe78c7673fb0149e5f8e2.json  query-7067bf62d8d054ca6ce94d333feb501f06beaca6a29b0c04cdb6036fee1fe54f.json  query-77e90577a1f850f7c3910ed8adcc449a10e6b682d1fb2463ddc92c7831b35bba.json  query-7dec018361582bbcdccfc2f90d9e81c88783c548db76134cb55b959b3e25bb95.json  query-86d416b8713fac0026152a77ffb27e0e0855b6e0b4c6bc1ac2f6952f5860e321.json  query-908507baf0ce0879dc199fc924f569417afa1138e2693be701a0d8afe1ae5420.json  query-9094bbfa7a3e086f3f66436b743603ffcabc12db03fb9e109816c57558d8406f.json  query-90e6845294ec1fbe2a1bad46e06b1c6137d4dfcf7a7702b719bc7b194b8db24d.json  query-9283dd1cbc2fcc23b1a45d8a56ed391553a688c6084227e90c17c255b099bd2c.json  query-94edff033fcf5d941fc56c1dcd989f62d482cbf51544edd0a78da8dc570205c2.json  query-987075ad1d2a7a8c767c8e9aa32d33586082c8114cd188a2288e5cfdfe051687.json  query-990159f2244b6b33f34b7853cfedcc5057296feb0eb4d0c935437ff82b66d6e2.json  query-9b91f3f2a56fbdce4426a3475ead3c8b3ddcb60f9351911edc281ca274adbedd.json  query-9e9ea83dbf5a107be4b83c7a0faddfb9a9012dc46d6ccea664de041b76990171.json  query-a2aef34f93285be9f0accdca0a38a6897111858977299799499f817dbeb2ed12.json  query-a849d127660c75c155d4039387c960dc8b21f55c85e28b83b584dde56e520225.json  query-ac9b4a6885b9878fcea31333d266279652216027a6a137c1f0b357804997c8e8.json  query-b38f875ed7d9fd8d0a345afbdffcb17216e73b6fd479eba9ac1d5052690cbfba.json  query-b582fb8ee6a11c7d56a95c58d97ccc75c2600d1798949ec02aa514743b0bbae4.json  query-b721a750c7dc86fcc263929f9037d64be1012ea276f8a0184aa61cab3401ae5a.json  query-be2cb1bcd4201aa4578f68ab024653ae125eda5adb9edeac62af99f3e4745ba1.json  query-bfff4cf454915f4474d7d263107a3cdb6d4a7236ece95f2d50df1c578ccf73a6.json  (+17 more)
rs/crates/chain/: Cargo.toml
rs/crates/chain/src/: beacon.rs  client.rs  evmauth.rs  lib.rs
rs/crates/evm/: Cargo.toml
rs/crates/evm/src/: beacon.rs  client.rs  evmauth.rs  lib.rs  signature.rs
rs/crates/pagination/: Cargo.toml  README.md
rs/crates/pagination-macros/: Cargo.toml  README.md
rs/crates/pagination-macros/src/: lib.rs
rs/crates/pagination/src/: error.rs  lib.rs  query.rs  types.rs
rs/crates/postgres/: Cargo.toml
rs/crates/postgres/src/: lib.rs
rs/crates/redis-client/: Cargo.toml
rs/crates/redis-client/src/: lib.rs
rs/crates/service-discovery/: Cargo.toml
rs/crates/service-discovery/src/: lib.rs
rs/crates/turnkey/: Cargo.toml
rs/crates/turnkey/src/: client.rs  lib.rs  signing.rs  sub_org.rs
rs/crates/types/: Cargo.toml
rs/crates/types/src/: lib.rs
rs/services/assets/: .env.example  Cargo.toml  service.json
rs/services/assets/src/: lib.rs  main.rs
rs/services/assets/src/api/: error.rs  mod.rs  openapi.rs  routes.rs
rs/services/assets/src/config/: mod.rs
rs/services/auth/: .env.example  Cargo.toml  README.md  service.json
rs/services/auth/src/: auth_code.rs  jwt.rs  lib.rs  main.rs  middleware.rs
rs/services/db/: .env.example  Cargo.toml  README.md  service.json
rs/services/db/docs/: SQL_GUIDE.md
rs/services/db/migrations/: 20251218000001_auth_entities.sql  20251218000002_auth_people.sql  20251218000003_auth_orgs.sql  20251218000004_auth_orgs_people.sql  20251218000005_auth_triggers.sql  20251218000006_assets_files.sql  20251218000007_assets_docs.sql  20251218000008_assets_images.sql  20251218000009_assets_media.sql  20251218000010_wallets_create_schema.sql  20251218000011_wallets_org_wallets.sql  20251218000012_wallets_person_turnkey_refs.sql  20251218000013_wallets_person_app_wallets.sql  20251218000014_auth_auth_codes.sql  20260311000001_registry_create_schema.sql  20260311000002_registry_app_registrations.sql  20260311000003_registry_contracts.sql  20260315000001_wallets_entity_wallets.sql  20260315000002_wallets_entity_app_wallets.sql  20260315000003_wallets_drop_legacy_tables.sql
rs/services/db/seeds/: 20251218555001_auth_entities.sql  20251218555002_assets_files.sql
rs/services/db/src/: lib.rs  main.rs
rs/services/docs/: .env.example  Cargo.toml  README.md  service.json
rs/services/docs/src/: lib.rs  main.rs
rs/services/gateway/: .env.example  Cargo.toml  README.md  service.json
rs/services/gateway/src/: lib.rs  main.rs
rs/services/registry/: .env.example  Cargo.toml  service.json
rs/services/registry/src/: lib.rs  main.rs
rs/services/wallets/: .env.example  Cargo.toml  service.json
rs/services/wallets/src/: lib.rs  main.rs
rs/tools/cli/: Cargo.toml
rs/tools/cli/src/: main.rs
(+248 files in other folders)
