[workspace]
resolver = "3"
members = [
    "services/assets",
    "services/auth",
    "services/db",
    "services/docs",
    "services/gateway",
    "crates/pagination",
    "crates/pagination-macros",
    "crates/postgres",
    "crates/redis-client",
    "crates/service-discovery",
]

[workspace.package]
edition = "2021"
rust-version = "1.88"

[workspace.dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Async runtime
tokio = { version = "1.48", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "migrate", "uuid", "chrono"] }
redis = { version = "1.0.1", features = ["tokio-comp", "connection-manager"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
dotenvy = "0.15"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Utilities
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["serde", "v4"] }

# OpenAPI documentation
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-axum = "0.1"

# Proc macros
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

# Internal crates
pagination = { path = "crates/pagination" }
postgres = { path = "crates/postgres" }
redis-client = { path = "crates/redis-client" }
service-discovery = { path = "crates/service-discovery" }
