[package]
name = "pagination"
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
base64.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
utoipa.workspace = true
uuid.workspace = true
pagination-macros = { path = "../pagination-macros" }
