[package]
name = "auth"
edition.workspace = true
rust-version.workspace = true
publish = false

[features]
default = []
internal-api = []

[dependencies]
# Web framework
axum = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }

# Database
sqlx = { workspace = true }
postgres = { workspace = true }

# Redis
redis = { workspace = true }
redis-client = { workspace = true }

# Pagination
pagination = { workspace = true }

# Domain types
types = { workspace = true }

# EVM
evm = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Configuration
dotenvy = { workspace = true }

# Logging and tracing
tracing = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Utilities
async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

# HTTP client (for internal service calls)
reqwest = { workspace = true }

# JWT
jsonwebtoken = { workspace = true }

# OpenAPI documentation
utoipa = { workspace = true }
utoipa-axum = { workspace = true }
subtle = "2.6.1"

[dev-dependencies]
