[package]
name = "docs"
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
# Web framework
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }

# HTTP client for fetching specs
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Configuration
dotenvy = { workspace = true }

# Logging and tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Internal crates
service-discovery = { workspace = true }
