[package]
name = "registry"
edition.workspace = true
rust-version.workspace = true
publish = false

[features]
default = []
internal-api = []

[dependencies]
# Web framework
axum = { workspace = true }
tokio = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Database
sqlx = { workspace = true }
postgres = { workspace = true }

# Redis
redis = { workspace = true }
redis-client = { workspace = true }

# Pagination
pagination = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Configuration
dotenvy = { workspace = true }

# Logging and tracing
tracing = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Utilities
async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
getrandom = { workspace = true }
uuid = { workspace = true }

# OpenAPI documentation
utoipa = { workspace = true }
utoipa-axum = { workspace = true }

# Domain types
types = { workspace = true }

# Blockchain
alloy = { workspace = true }
evm = { workspace = true }

# Signature verification
hex = "0.4"

[dev-dependencies]
